--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&family=Roboto:ital,wght@0,100;1,900&display=swap" rel="stylesheet">
     <title>FleetUp</title>
+
     <script src="https://kit.fontawesome.com/d366ee13ea.js" crossorigin="anonymous"></script>
   </head>
   <body>
